# traitor

./: .gitignore  Cargo.toml
macro/: Cargo.toml
macro/src/: lib.rs
src/: bound.rs  lib.rs
src/algebra/: .#integer.rs  group_like.rs  integer.rs  mod.rs  module_like.rs  ring_like.rs
src/analysis/: metric.rs  mod.rs  ordered.rs  real.rs
src/collection/: array.rs  mod.rs
src/collection/array/: bound.rs  inline.rs  metric.rs  mod.rs  smallvec.rs  vec.rs
src/linear/: mod.rs  vector.rs
src/ops/: mod.rs
test/: Cargo.toml
test/src/: main.rs
