[package]
name = "traitor"
description = "A collection of traits to allow greater algorithmic and architectural modularity in library design."
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = {version = "0.2", default-features = false}

[package.metadata.docs.rs]
features = ["std"]

[features]
default = ["std"]
std = []
